add socket registration with user token and fixed tests